js/js.translator/testData/incremental/invalidation/moveAndModifyInlineFunction/lib1/l1a.0.kt
inline fun inlineFun() = 0
